--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -19,14 +19,13 @@
         android:id="@+id/recyclerview"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:padding="@dimen/big_padding"
         app:layout_constraintBottom_toTopOf="@+id/button_first"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textview_first"
-        app:layout_constraintVertical_bias="0.0"
-        tools:listitem="@layout/recyclerview_item" />
+        app:layout_constraintVertical_bias="0.0"/>
+        <!-- tools:listitem="@layout/recyclerview_item" -->
 
     <Button
         android:id="@+id/button_first"
