--- a/app/src/main/res/layout/contact_activity.xml
+++ b/app/src/main/res/layout/contact_activity.xml
@@ -12,7 +12,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.ContactApp.NoActionBar">
+        android:theme="@style/Theme.AppCompat.Light">
 
         <TextView
             android:id="@+id/title"
