--- a/app/src/main/res/layout/contact_activity.xml
+++ b/app/src/main/res/layout/contact_activity.xml
@@ -14,21 +14,22 @@
         android:layout_height="wrap_content"
         android:theme="@style/Theme.AppCompat.Light">
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/editTextContact"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:minHeight="?actionBarSize"
-            android:padding="10dp"
-            android:text="@string/app_name"
-            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
+            android:hint="Search a contact"
+            android:inputType="textPersonName"
+            android:text="" />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary" />
+
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager.widget.ViewPager
