--- a/app/src/main/res/layout/contact_activity.xml
+++ b/app/src/main/res/layout/contact_activity.xml
@@ -7,7 +7,8 @@
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
