--- a/app/src/main/res/layout/contact_activity.xml
+++ b/app/src/main/res/layout/contact_activity.xml
@@ -12,8 +12,8 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/Theme.AppCompat.Light">
+        android:layout_height="wrap_content">
+
 
         <EditText
             android:id="@+id/editTextContact"
@@ -25,10 +25,12 @@
             android:text="" />
 
         <com.google.android.material.tabs.TabLayout
+            app:tabTextColor="@color/white"
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary" />
+            style="@style/Theme.TabLayout"
+            app:tabTextAppearance="@style/Theme.TabTextAppearance"/>
 
 
     </com.google.android.material.appbar.AppBarLayout>
