--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,9 +2,9 @@
     <!-- Base application theme. -->
     <style name="Theme.ContactApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#00a6b6 </item>
-        <item name="colorPrimaryVariant">#5bd8e8</item>
-        <item name="colorOnPrimary">#007786</item>
+        <item name="colorPrimary">@color/numerbly_medium_blue</item>
+        <item name="colorPrimaryVariant">@color/numerbly_light_grey</item>
+        <item name="colorOnPrimary">@color/white </item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">?attr/colorPrimary</item>
         <item name="colorSecondaryVariant">#cc0000</item>
@@ -12,14 +12,25 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
         <!-- Customize your theme here. -->
-        <item name="android:textColor">#393b3f</item>
-        <item name="subtitleTextColor">#CCCCCC</item>
+        <item name="android:textColor">@color/numerbly_grey</item>
+        <item name="android:cacheColorHint">@color/numerbly_light_grey</item>
 
+    </style>
+
+    <style name="Theme.TabLayout" parent="Widget.Design.AppBarLayout">
+        <item name="tabIndicatorColor">@color/numerbly_clear_blue</item>
+        <item name="tabSelectedTextColor">@color/white</item>
+    </style>
+
+    <style name="Theme.TabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textColor">@color/white</item>
+        <item name="textAllCaps">true</item>
     </style>
 
     <style name="Theme.ContactApp.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+
     </style>
 
     <style name="Theme.ContactApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
