--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,7 +24,7 @@
 
     <style name="Theme.TabTextAppearance" parent="TextAppearance.Design.Tab">
         <item name="android:textColor">@color/white</item>
-        <item name="textAllCaps">true</item>
+        <item name="textAllCaps">false</item>
     </style>
 
     <style name="Theme.ContactApp.NoActionBar">
