--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,6 +22,10 @@
         <item name="tabSelectedTextColor">@color/white</item>
     </style>
 
+    <style name="Theme.TextInputLayout" parent="Widget.Design.TextInputLayout">
+        <item name="android:layout_margin">@dimen/small_padding</item>
+    </style>
+
     <style name="Theme.TabTextAppearance" parent="TextAppearance.Design.Tab">
         <item name="android:textColor">@color/white</item>
         <item name="textAllCaps">false</item>
