--- a/app/src/main/res/layout/create_modify_contact_activity.xml
+++ b/app/src/main/res/layout/create_modify_contact_activity.xml
@@ -83,6 +83,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tiFirstName">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/tieMail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/new_contact_activity_mail_hint"
