--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -5,6 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <variable
+            name="onClick"
+            type="fr.dleurs.android.contactapp.ui.main.OnClick" />
 
         <variable
             name="contact"
@@ -14,7 +17,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="@{() -> contact.onContactClick()}">
+        android:onClick="@{() -> onClick.onItemClick(contact)}">
 
 
         <ImageView
