java.lang.RuntimeException: Unable to start activity ComponentInfo{fr.dleurs.android.contactapp/fr.dleurs.android.contactapp.ui.detailsContact.DetailsContactActivity}: java.lang.IllegalArgumentException: Unable to construct viewmodel

--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -17,7 +17,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="@{() -> onClick.onItemClick(contact)}">
+        android:onClick="@{() -> onClick.onItemClick(contact.id)}">
 
 
         <ImageView
